[metadata]
name = AFEM
author = Arturo Rodriguez
author_email = da.rodriguezh@uniandes.edu.co
version = attr: FEM.__version__
description = A Finite Element Python implementation
long_description_content_type = text/markdown
long_description =  file: README.md
url = https://github.com/ZibraMax/FEM
package_dir =
    = src
[options]
python_requires = >=3.6
install_requires =
    numpy
    matplotlib
    triangle
    scipy
    tqdm
[options.extras_require]
docs = 
    sphinx
    m2r2
    docutils==0.18.1
    furo
test =
    pytest
    pytest-emoji
